
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {unsigned short expected_payload_size; TYPE_1__* payload; scalar_t__ bytes_read_payload; scalar_t__ bytes_read_total; scalar_t__ sym_key_set; } ;
struct TYPE_3__ {unsigned char data; int command_id; } ;


 TYPE_2__ client_sock_state ;
 int free (TYPE_1__*) ;
 unsigned short ntohs (int ) ;
 int packet_client_authenticate (unsigned char*,unsigned short) ;
 int packet_client_billinginfo (unsigned char*,unsigned short) ;
 int packet_client_setenckey (unsigned char*,unsigned short) ;
 int symdecrypt_in_place (unsigned char*,unsigned short) ;

void process_recvd_packet(void)
{
    unsigned short command_id;
    unsigned short payload_size;
    unsigned char *data;

    payload_size = client_sock_state.expected_payload_size;
    data = &client_sock_state.payload->data;

    if (client_sock_state.sym_key_set)
    {
        symdecrypt_in_place((unsigned char *)client_sock_state.payload, payload_size);

    }


    command_id = ntohs(client_sock_state.payload->command_id);



    payload_size -= 2;

    switch (command_id)
    {
    case 0x012c:
        packet_client_authenticate(data, payload_size);
        break;
    case 0x0130:
        packet_client_billinginfo(data, payload_size);
        break;
    case 0x014b:
        packet_client_setenckey(data, payload_size);
        break;
    }

    client_sock_state.bytes_read_total = 0;
    client_sock_state.bytes_read_payload = 0;
    client_sock_state.expected_payload_size = 0;
    free(client_sock_state.payload);
    client_sock_state.payload = ((void*)0);
}
