; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_23873.c_process_recvd_packet.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_23873.c_process_recvd_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i16, %struct.TYPE_3__*, i64, i64, i64 }
%struct.TYPE_3__ = type { i8, i32 }

@client_sock_state = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @process_recvd_packet() #0 {
  %1 = alloca i16, align 2
  %2 = alloca i16, align 2
  %3 = alloca i8*, align 8
  %4 = load i16, i16* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 0), align 8
  store i16 %4, i16* %2, align 2
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 1), align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i8* %6, i8** %3, align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 4), align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 1), align 8
  %11 = bitcast %struct.TYPE_3__* %10 to i8*
  %12 = load i16, i16* %2, align 2
  %13 = call i32 @symdecrypt_in_place(i8* %11, i16 zeroext %12)
  br label %14

14:                                               ; preds = %9, %0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 1), align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call zeroext i16 @ntohs(i32 %17)
  store i16 %18, i16* %1, align 2
  %19 = load i16, i16* %2, align 2
  %20 = zext i16 %19 to i32
  %21 = sub nsw i32 %20, 2
  %22 = trunc i32 %21 to i16
  store i16 %22, i16* %2, align 2
  %23 = load i16, i16* %1, align 2
  %24 = zext i16 %23 to i32
  switch i32 %24, label %37 [
    i32 300, label %25
    i32 304, label %29
    i32 331, label %33
  ]

25:                                               ; preds = %14
  %26 = load i8*, i8** %3, align 8
  %27 = load i16, i16* %2, align 2
  %28 = call i32 @packet_client_authenticate(i8* %26, i16 zeroext %27)
  br label %37

29:                                               ; preds = %14
  %30 = load i8*, i8** %3, align 8
  %31 = load i16, i16* %2, align 2
  %32 = call i32 @packet_client_billinginfo(i8* %30, i16 zeroext %31)
  br label %37

33:                                               ; preds = %14
  %34 = load i8*, i8** %3, align 8
  %35 = load i16, i16* %2, align 2
  %36 = call i32 @packet_client_setenckey(i8* %34, i16 zeroext %35)
  br label %37

37:                                               ; preds = %14, %33, %29, %25
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 2), align 8
  store i16 0, i16* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 0), align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 1), align 8
  %39 = call i32 @free(%struct.TYPE_3__* %38)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @client_sock_state, i32 0, i32 1), align 8
  ret void
}

declare dso_local i32 @symdecrypt_in_place(i8*, i16 zeroext) #1

declare dso_local zeroext i16 @ntohs(i32) #1

declare dso_local i32 @packet_client_authenticate(i8*, i16 zeroext) #1

declare dso_local i32 @packet_client_billinginfo(i8*, i16 zeroext) #1

declare dso_local i32 @packet_client_setenckey(i8*, i16 zeroext) #1

declare dso_local i32 @free(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
